	Thurston <kimball@sgrail.com> for pointing out my oversight.

	Furthermore, I added a parameter to the --enable-multi-charset option
	for configure.  You can now specify =utf-8 to get UTF-8 fonts for the
	multi-byte mode stuff.  If you pass =kanji (or no value at all), you
	will still get the old Kanji fonts.  If you use multi-byte Eterm and
	have a set of fonts for other setups (Big 5, Cyrillic, etc.), please
	let me know and I'll add a parameter for those too.
	
-------------------------------------------------------------------------------
Thu Oct  7 16:39:48 PDT 1999	Michael Jennings <mej@eterm.org>

	raster pointed out that the "clicked" image for the scrollbar anchor
	wasn't working.  It is now. :-)
	
-------------------------------------------------------------------------------
Thu Oct  7 18:48:31 PDT 1999	Michael Jennings <mej@eterm.org>

	Shaved off around 100 KB of memory usage per Eterm by moving more
	code into the shared library, removing lots of unneeded variables, and
	fixing some small leaks here and there.
	
-------------------------------------------------------------------------------
Fri Oct  8 15:31:49 PDT 1999	Michael Jennings <mej@eterm.org>

	This should fix all the weird menu behavior from time to time (well,
	I hope it does anyway).
	
-------------------------------------------------------------------------------
Mon Oct 11 15:54:52 PDT 1999	Michael Jennings <mej@eterm.org>

	Lots of cleanups here, including a couple fixes for bugs noticed by
	Tom Gilbert <gilbertt@tomgilbert.freeserve.co.uk> and Martin Tyler
	<martin@boo.org>.  Also removed the requirement of glibc 2.1 for using
	SVR4-style pty's (/dev/pts/*) under Linux.
	
-------------------------------------------------------------------------------
Mon Oct 11 16:48:22 PDT 1999	Michael Jennings <mej@eterm.org>

	More useless, hackish, and/or poorly-written code meets an untimely
	end.
	
-------------------------------------------------------------------------------